# yadisk-client

./: .gitignore  Cargo.toml  README.md  ydclient.toml.example
src/: cli.rs  data_controls.rs  data_structures.rs  main.rs
src/yandex_disk_api/: mod.rs  yandex_disk_data_structures.rs  yandex_disk_oauth.rs
