[package]
name = "yadisk-client"
version = "0.0.4"
authors = ["mbarablin <m@mdbx.ru>"]
edition = "2018"


[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
clap = { version = ">=2.33.0" }
mime = { version = ">=0.3.16" }
serde_json = { version = ">=1.0.52" }
serde = { version = ">=1", features = ["derive"]}
percent-encoding = ">=2.1"
colored = "2"
url = {}
