[package]
name = "yadisk-client"
version = "0.1.0"
authors = ["mbarablin <m@mdbx.ru>"]
edition = "2018"


[dependencies]
base64 = ">=0.12.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
clap = { version = ">=2.33.0" }
mime = { version = ">=0.3.16" }
serde_json = { version = ">=1.0.52" }
serde = { version = ">=1", features = ["derive"]}
percent-encoding = ">=2.1"
colored = "2"
url = ">=2.1.1"
text_io = ">=0.1.8"
notify = ">=5.0.0-pre.3"
toml = ">=0.5.6"
rusqlite = "0.24.0"
md-5 = ">=0.9.1"